<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_title"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tip_content"/>
            <Button
                android:id="@+id/authority_btn"
                android:layout_gravity="right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="去开启"
                android:background="?attr/selectableItemBackground"
                android:textColor="@color/pink"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tts_title"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tts_content"/>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/input_test"
                    android:hint="测试语音播报效果"/>
                <ImageButton
                    android:layout_weight="1"
                    android:layout_gravity="center_vertical"
                    android:background="?attr/selectableItemBackground"
                    android:src="@drawable/ic_baseline_mic_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/play_btn"/>
            </LinearLayout>

            <ToggleButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:textColor="@color/white"
                android:textOff="已关闭"
                android:textOn="已开启"
                android:id="@+id/tts_toggle"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:elevation="5dp"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_title"
            android:textColor="@color/black"
            android:textSize="18sp"/>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/com_content"/>
        <ToggleButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textOff="已关闭"
            android:textOn="已开启"
            android:id="@+id/com_toggle"/>
    </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>